<resources>
    <string name="app_name">Marvel</string>
    <string name="chtrs">Characters</string>
    <string name="comics">Comics</string>
    <string name="events">Events</string>
    <string name="series">Series</string>
    <string name="creators">Creators</string>
    <string name="stories">Stories</string>
    <string name="more_info">More Info</string>
    <string name="currency">€</string>
    <string name="signed_in_fmt">SignIn %s</string>
</resources>
