<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tabs_pager"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TabLayout
        style="@style/TabLayoutStyle"
        android:id="@+id/tabs_layout_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</android.support.v4.view.ViewPager>




